replace evince with papers; zathura for synctex support

--- a/files/usr/share/timesink/flatpak/install
+++ b/files/usr/share/timesink/flatpak/install
@@ -3,8 +3,8 @@ com.nextcloud.desktopclient.nextcloud
 com.spotify.Client
 com.usebottles.bottles
 com.vysp3r.ProtonPlus
-org.gnome.Evince
 org.gnome.Geary
 org.gnome.Loupe
+org.gnome.Papers
 org.gnome.SimpleScan
 org.keepassxc.KeePassXC
